--- a/rtk1-v6/0188.md
+++ b/rtk1-v6/0188.md
@@ -25,5 +25,5 @@ next: 量
 
 4) [<a href="http://kanji.koohii.com/profile/gringozolano">gringozolano</a>] 5-4-2008(31): In front of my <strong>parents&#039; home</strong> is a <strong>fish</strong> pond full of <em>carp</em>.
 
-5) [<a href="http://kanji.koohii.com/profile/alanj">alanj</a>] 7-9-2008(27): Bad pun: Japanese<strong> carp</strong> are <em>fish</em> that grow RI-ly big! :-).
+5) [jakovfreund] 5-3-2023: Colourful Koi carps are commonly used as desktop backgrounds.
 
